# objcpp-metal-triangle

./: .gitmodules  CMakeLists.txt  README.md
assets/: shaders.metal
src/: main.cpp
